[package]
name = "winit-test"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "Run tests using the winit event loop"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
owo-colors = "3.5.0"
winit = { version = "0.28.6", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test = "0.3"
web-time = "0.2"

[dev-dependencies]
winit = { version = "0.28.6", default-features = false, features = ["x11", "wayland"] }

[[test]]
name = "winit_test"
path = "tests/winit_test.rs"
harness = false
