[package]
name = "winit-test"
version = "0.1.2"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "Run tests using the winit event loop"
license = "MIT OR Apache-2.0 OR Zlib"
documentation = "https://docs.rs/winit-test"
repository = "https://github.com/notgull/winit-test"
homepage = "https://github.com/notgull/winit-test"

[dependencies]
owo-colors = "3.5.0"
winit = { version = "0.28.6", default-features = false, features = ["android-native-activity"] }

[features]
default = ["x11", "wayland", "wayland-dlopen"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]
wayland-dlopen = ["winit/wayland-dlopen"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test = "0.3"
web-time = "0.2"

[dev-dependencies]
winit = { version = "0.28.6", default-features = false, features = ["x11", "wayland"] }

[[test]]
name = "winit_test"
harness = false

# cargo-apk can only select libraries and examples, not tests
[[example]]
name = "winit_test_android"
# https://github.com/rust-mobile/cargo-apk/pull/28
crate-type = ["cdylib"]
