[package]
name = "winit-test"
version = "0.2.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]
description = "Run tests using the winit event loop"
license = "MIT OR Apache-2.0 OR Zlib"
documentation = "https://docs.rs/winit-test"
repository = "https://github.com/notgull/winit-test"
homepage = "https://github.com/notgull/winit-test"
rust-version = "1.65.0"

[dependencies]
owo-colors = "3.5.0"
winit = { version = "0.29.2", default-features = false, features = ["android-native-activity"] }

[features]
default = ["x11", "wayland", "wayland-dlopen"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]
wayland-dlopen = ["winit/wayland-dlopen"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test = "0.3"
web-time = "0.2"

[dev-dependencies]
winit = { version = "0.29.2", default-features = false, features = ["x11", "wayland"] }

[[test]]
name = "winit_test"
harness = false

# cargo-apk can only select libraries and examples, not tests
[[example]]
name = "winit_test_android"
# https://github.com/rust-mobile/cargo-apk/pull/28
crate-type = ["cdylib"]

